# GAN-DA-API

./: .deepsource.toml  .gitignore  Procfile  README.md  load_test.js  pyproject.toml  run.py
API/: test_api.py
app/: main.py  utils.py
app/api/: deliveries.py  scrape.py  stocks.py  test.py
app/data/: route_id.json
app/test/: Bali.json
selenium_bot/: __init__.py  bot.py  test_bot.py
src/: __init__.py
src/api/: __init__.py  api_module.py
src/bot/: __init__.py  bot_module.py  test_bot.py
src/firebase/: __init__.py
