[tool.poetry]
name = "gan-da-api"
version = "0.1.0"
description = ""
authors = ["Aditya Wardianto <adityawardianto.19073@mhs.its.ac.id>"]

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
Pyrebase4 = "^4.5.0"
selenium-requests = "^1.3.3"
lxml = "^4.7.1"
cssselect = "^1.1.0"
requests-futures = "^1.0.0"
fastapi-cache2 = "^0.1.8"
gunicorn = "^20.1.0"
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
